RESOLVED FIXED204614
[GTK] WebDriver: moving toplevel windows is not supported under wayland
https://bugs.webkit.org/show_bug.cgi?id=204614
Summary [GTK] WebDriver: moving toplevel windows is not supported under wayland
Carlos Garcia Campos
Reported 2019-11-26 05:35:23 PST
So we can stop trying and simply ignore the requests to move the window.
Attachments
Patch (4.81 KB, patch)
2019-11-26 05:38 PST, Carlos Garcia Campos
alex: review+
Carlos Garcia Campos
Comment 1 2019-11-26 05:38:17 PST
EWS Watchlist
Comment 2 2019-11-26 05:39:17 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Alejandro G. Castro
Comment 3 2019-11-27 01:03:33 PST
Comment on attachment 384347 [details] Patch LGTM
Carlos Garcia Campos
Comment 4 2019-11-27 02:19:45 PST
Note You need to log in before you can comment on or make changes to this bug.