[GTK] WebDriver: moving toplevel windows is not supported under wayland https://bugs.webkit.org/show_bug.cgi?id=204614

Reviewed by Alejandro G. Castro.

So we can stop trying and simply ignore the requests to move the window.

* UIProcess/API/glib/WebKitUIClient.cpp:
(UIClient::windowConfigureEventCallback): Ensure we only move or resize when actually required and reduce the
time we wait for configure events to 200ms (1 second was too long).

Canonical link: https://commits.webkit.org/217872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252898 268f45cc-cd09-0410-ab3c-d52691b4dbfc